Уточнить статусы возможностей Java 24-26